# ufr

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile2  README.md
cv_mat/: CMakeLists.txt
cv_mat/examples/: simple.c
cv_mat/include/: cv_mat.h
cv_mat/src/: cv_mat.cpp
examples/: CMakeLists.txt  client.c  magrin_publisher.c  publisher.c  server.c  subscriber.c  teste.c  teste.cpp  teste_noetic_magrin.c
ufr-api-c/: CMakeLists.txt
ufr-api-c/examples/: CMakeLists.txt  publisher.c  server.c  subscriber.c  teste.c  teste_noetic_magrin.c
ufr-api-c/include/: ufr.h  ufr_test.h
ufr-api-c/src/: ufr.c  ufr_api.c  ufr_api_get.c  ufr_api_put.c  ufr_args.c  ufr_buffer.c  ufr_get.c  ufr_linux.c  ufr_linux.h  ufr_meta.c  ufr_posix_pipe.c  ufr_put.c  ufr_recv_linux.c  ufr_sys_std_dcr.c  ufr_sys_std_enc.c
ufr-api-c/templates/: decoder.c  encoder.c
ufr-api-c/tests/: test_api.c  test_buffer.c  test_std_dcr.c  test_std_enc.c
ufr-api-php/: php_ufr.c
ufr-api-python/examples/: publisher.py  subscriber.py
ufr-api-python/ufr/: link.py
ufr-cdr-csv/: CMakeLists.txt
ufr-cdr-csv/src/: ufr_dcr_csv.c  ufr_enc_csv.cpp
ufr-cdr-csv/tests/: test_dcr_csv.c  test_enc_csv.c
ufr-cdr-http/: CMakeLists.txt
ufr-cdr-msgpack/: CMakeLists.txt
ufr-cdr-msgpack/src/: ufr_dcr_msgpack.c  ufr_enc_msgpack.c
ufr-cdr-msgpack/tests/: CMakeLists.txt  test_dcr_msgpack.c  test_enc_msgpack.c
ufr-cdr-text/: CMakeLists.txt
ufr-cdr-text/src/: ufr_dcr_text.c  ufr_enc_text.c
ufr-cdr-text/tests/: CMakeLists.txt  test_dcr_text.c  test_enc_text.c
ufr-dev-camera/examples/: example1.cpp
ufr-dev-camera/src/: ufr_gtw_video.c  ufr_stk_video_link.cpp  ufr_stk_video_opencv.cpp
ufr-dev-video/: CMakeLists.txt
ufr-dev-video/examples/: example1.cpp
ufr-dev-video/src/: ufr_gtw_video.c  ufr_stk_video_link.cpp  ufr_stk_video_opencv.cpp
ufr-gtw-chart/: CMakeLists.txt
ufr-gtw-chart/src/: ufr_gtw_chart.c  ufr_gtw_chart2d.c
ufr-gtw-chart/tests/: CMakeLists.txt  main.c
ufr-gtw-file/: CMakeLists.txt
ufr-gtw-file/src/: ufr_gtw_file.c
ufr-gtw-file/tests/: CMakeLists.txt  test_file.c
ufr-gtw-mqtt/: CMakeLists.txt
ufr-gtw-mqtt/src/: ufr_gtw_mqtt.h  ufr_gtw_mqtt_socket.c  urf_gtw_mqtt.c
ufr-gtw-posix/: CMakeLists.txt
ufr-gtw-posix/src/: ufr_gtw_timer.c  ufr_message.c  ufr_posix_dir.c  ufr_posix_file.c  ufr_posix_pipe.c  ufr_posix_socket.c  ufr_posix_socket_cli.c  ufr_posix_socket_srv_mt.c  ufr_posix_socket_srv_st.c  ufr_posix_thread.c
ufr-gtw-posix/tests/: CMakeLists.txt  test_file.c  test_pipe.c  test_socket.c
ufr-gtw-zmq/: CMakeLists.txt
ufr-gtw-zmq/src/: ufr_zmq_common.c  ufr_zmq_socket.c  ufr_zmq_topic.c
ufr-gtw-zmq/tests/: test_gtw_zmq.c
ufr-stk-ros1/: CMakeLists.txt
ufr-stk-ros1/src/: ufr_gtw_ros1.cpp  ufr_gtw_ros1.hpp
ufr-stk-ros1/src/sensor_msgs/: ufr_dcr_image.cpp  ufr_dcr_imu.cpp  ufr_dcr_laserscan.cpp
ufr-stk-ros1/src/std_msgs/: ufr_dcr_i16.cpp  ufr_dcr_string.cpp  ufr_enc_string.cpp
ufr-stk-ros2/: CMakeLists.txt  package.xml
ufr-stk-ros2/src/: ufr_gtw_ros2.cpp  ufr_gtw_ros2.hpp  ufr_gtw_ros_humble.hpp
ufr-stk-ros2/src/geometry_msgs/: ufr_dcr_pose.cpp  ufr_dcr_twist.cpp  ufr_enc_pose.cpp  ufr_enc_twist.cpp
ufr-stk-ros2/src/sensor_msgs/: ufr_dcr_image.cpp  ufr_dcr_laserscan.cpp  ufr_enc_image.cpp  ufr_enc_laserscan.cpp
ufr-stk-ros2/src/std_msgs/: ufr_dcr_string.cpp  ufr_enc_string.cpp  ufr_enc_tf.cpp
ufr-stk-ros2/tests/: CMakeLists.txt  test1.cpp
ufr-stk-ros_humble/: CMakeLists.txt
ufr-stk-ros_humble/src/: ufr_gtw_ros_humble.cpp
ufr-stk-ros_humble/src/geometry_msgs/: ufr_dcr_pose.cpp  ufr_dcr_twist.cpp  ufr_enc_twist.cpp
ufr-stk-ros_humble/src/sensor_msgs/: ufr_dcr_image.cpp  ufr_enc_image.cpp  ufr_enc_laserscan.cpp
ufr-stk-ros_humble/tests/: test1.cpp
ufr-stk-ros_melodic/: CMakeLists.txt
ufr-stk-ros_melodic/src/: ufr_dcr_i16.cpp  ufr_dcr_laserscan.cpp  ufr_gtw_ros_melodic.cpp
ufr-stk-ros_melodic/src/geometry_msgs/: ufr_dcr_pose.cpp  ufr_dcr_twist.cpp  ufr_enc_pose.cpp  ufr_enc_twist.cpp
ufr-stk-ros_melodic/src/sensor_msgs/: ufr_dcr_image.cpp  ufr_dcr_imu.cpp  ufr_dcr_laserscan.cpp  ufr_dcr_navsatfix.cpp  ufr_dcr_range.cpp  ufr_enc_image.cpp
ufr-stk-ros_melodic/src/std_msgs/: ufr_dcr_i16.cpp
ufr-stk-ros_noetic/: CMakeLists.txt
ufr-stk-ros_noetic/src/: ufr_gtw_ros_noetic.cpp
ufr-stk-ros_noetic/src/sensor_msgs/: ufr_dcr_image.cpp  ufr_dcr_imu.cpp  ufr_dcr_laserscan.cpp  ufr_dcr_navsatfix.cpp  ufr_dcr_range.cpp  ufr_enc_image.cpp  ufr_enc_laserscan.cpp
ufr-stk-ros_noetic/src/std_msgs/: ufr_dcr_i16.cpp  ufr_enc_string.cpp
ufr-stk-sqlite/src/: ufr_dcr_sqlite.c  ufr_enc_sqlite.c  ufr_gtw_sqlite.c  ufr_gtw_sqlite.h
ufr-stk-sqlite/tests/: test_gtw_sqlite.c
ufr-stk-ssh/src/: ufr_gtw_ssh.c
ufr-stk-ssh/tests/: test1.c
ufr-stk-telegram/: CMakeLists.txt
ufr-stk-telegram/examples/: bot.c  bot.py
ufr-stk-telegram/libtelebot/: CMakeLists.txt  README.md
ufr-stk-telegram/src/: ufr_gtw_telegram.c
ufr-stk-webots/: CMakeLists.txt
ufr-stk-webots/examples/: e01_lidar.c  e02_pioneer.c
ufr-stk-webots/src/: dcr_encoders.c  dcr_lidar.c  dcr_pose.c  enc_motors.c  enc_motors_drone.c  gtw_webots.c  ufr_webots.h
ufr-stk-webots/tests/: test1.c
